--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
   "presets": [
     "@babel/preset-env",
-    "@babel/preset-react",
-    "mobx"
+    "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-proposal-class-properties",
+    ["@babel/plugin-proposal-decorators", {"legacy": true}],
+    ["@babel/plugin-proposal-class-properties", {"loose": true}],
     "@babel/plugin-proposal-export-namespace-from",
     "@babel/plugin-proposal-throw-expressions"
   ]
